Auth service and api gateway services docs and context update :: last stable version for testing :: updated configurations and dependency tree shaking and reduction